// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-size: 10px;
  margin-left: 12px;
  padding-top: 6px;
  margin-bottom: -20px;
  font-weight: 700;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  border-radius: 12px;
}

.c2::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c2::-moz-placeholder {
  color: #4f6f8f;
}

.c2:-ms-input-placeholder {
  color: #4f6f8f;
}

.c2::placeholder {
  color: #4f6f8f;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c2 {
    font-size: 14px;
  }
}

<div
  className=""
>
  <label
    className="c0"
    color="text.light"
    fontSize={10}
    fontWeight={700}
    htmlFor="email"
    letterSpacing="0.2px"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "pointerEvents": "none",
        "position": "relative",
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
        "width": "calc(100% - 12px)",
      }
    }
  >
    Email Address
  </label>
  <div
    className="c1"
  >
    <input
      className="c2"
      fontSize={
        Array [
          2,
          null,
          1,
        ]
      }
      id="email"
      name="email"
      size="lg"
      style={
        Object {
          "paddingBottom": "8px",
          "paddingTop": "20px",
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Icon 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-left: 8px;
  margin-right: 8px;
  width: 24px;
}

.c5 {
  outline: none;
}

.c2 {
  margin-right: -40px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-size: 10px;
  margin-left: 40px;
  padding-top: 6px;
  margin-bottom: -20px;
  font-weight: 700;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  border-radius: 12px;
  padding-left: 40px;
}

.c6::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c6::-moz-placeholder {
  color: #4f6f8f;
}

.c6:-ms-input-placeholder {
  color: #4f6f8f;
}

.c6::placeholder {
  color: #4f6f8f;
}

.c6::-ms-clear {
  display: none;
}

.c6:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c6 {
    font-size: 14px;
  }
}

<div
  className=""
>
  <label
    className="c0"
    color="text.light"
    fontSize={10}
    fontWeight={700}
    htmlFor="email"
    letterSpacing="0.2px"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "pointerEvents": "none",
        "position": "relative",
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
        "width": "calc(100% - 40px)",
      }
    }
  >
    Email Address
  </label>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      data-testid="icon-field-prefix-icons"
    >
      <svg
        aria-hidden={true}
        className="c4 c5"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
        />
      </svg>
    </div>
    <input
      className="c6"
      fontSize={
        Array [
          2,
          null,
          1,
        ]
      }
      id="email"
      name="email"
      size="lg"
      style={
        Object {
          "paddingBottom": "8px",
          "paddingTop": "20px",
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Label autoHide prop 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-left: 8px;
  margin-right: 8px;
  width: 24px;
}

.c5 {
  outline: none;
}

.c2 {
  margin-right: -40px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-size: 10px;
  margin-left: 40px;
  padding-top: 6px;
  margin-bottom: -20px;
  font-weight: 700;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  border-radius: 12px;
  padding-left: 40px;
}

.c6::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c6::-moz-placeholder {
  color: #4f6f8f;
}

.c6:-ms-input-placeholder {
  color: #4f6f8f;
}

.c6::placeholder {
  color: #4f6f8f;
}

.c6::-ms-clear {
  display: none;
}

.c6:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c6 {
    font-size: 14px;
  }
}

<div
  className=""
>
  <label
    className="c0"
    color="text.light"
    fontSize={10}
    fontWeight={700}
    htmlFor="email"
    letterSpacing="0.2px"
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "relative",
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
        "width": "calc(100% - 40px)",
      }
    }
  >
    Email
  </label>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      data-testid="icon-field-prefix-icons"
    >
      <svg
        aria-hidden={true}
        className="c4 c5"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
        />
      </svg>
    </div>
    <input
      className="c6"
      fontSize={
        Array [
          2,
          null,
          1,
        ]
      }
      id="email"
      name="email"
      size="lg"
      style={
        Object {
          "paddingBottom": undefined,
          "paddingTop": undefined,
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Select  1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #4f6f8f;
  margin-left: -32px;
  width: 24px;
}

.c5 {
  outline: none;
}

.c2 {
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-size: 10px;
  margin-left: 12px;
  padding-top: 6px;
  margin-bottom: -20px;
  font-weight: 700;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c6 {
  pointer-events: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 12px;
  border-width: 1px;
  border-style: solid;
  padding: 14px 32px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  margin: 0px;
  border-radius: 12px;
}

.c3::-ms-expand {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c3 {
    font-size: 14px;
  }
}

<div
  className=""
>
  <label
    className="c0"
    color="text.light"
    fontSize={10}
    fontWeight={700}
    letterSpacing="0.2px"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "pointerEvents": "none",
        "position": "relative",
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
        "width": "calc(100% - 12px)",
      }
    }
  >
    Pick Option
  </label>
  <div
    className="c1"
  >
    <div
      className="c2 c1"
      width={1}
    >
      <select
        className="c3"
        fontSize={
          Array [
            2,
            null,
            1,
          ]
        }
        size="lg"
        style={
          Object {
            "paddingBottom": "8px",
            "paddingTop": "20px",
            "transitionDuration": ".1s",
            "transitionProperty": "padding-top, padding-bottom",
          }
        }
      />
      <svg
        aria-hidden={true}
        className="c4 c5 c6"
        color="text.light"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.4 8l4.6 4.6L16.6 8 18 9.4l-6 6-6-6L7.4 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField renders with Select and Icon 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  margin-left: 8px;
  margin-right: 8px;
  width: 24px;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  color: #4f6f8f;
  margin-left: -32px;
  width: 24px;
}

.c9 {
  outline: none;
}

.c5 {
  outline: none;
}

.c2 {
  margin-right: -40px;
}

.c6 {
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  color: #4f6f8f;
  font-size: 10px;
  margin-left: 40px;
  padding-top: 6px;
  margin-bottom: -20px;
  font-weight: 700;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c10 {
  pointer-events: none;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 12px;
  border-width: 1px;
  border-style: solid;
  padding: 14px 32px 14px 12px;
  border-color: #c0cad5;
  padding-left: 40px;
  font-size: 16px;
  margin: 0px;
  border-radius: 12px;
}

.c7::-ms-expand {
  display: none;
}

.c7:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c7 {
    font-size: 14px;
  }
}

<div
  className=""
>
  <label
    className="c0"
    color="text.light"
    fontSize={10}
    fontWeight={700}
    letterSpacing="0.2px"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "pointerEvents": "none",
        "position": "relative",
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
        "width": "calc(100% - 40px)",
      }
    }
  >
    Pick Email Address
  </label>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      data-testid="icon-field-prefix-icons"
    >
      <svg
        aria-hidden={true}
        className="c4 c5"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
        />
      </svg>
    </div>
    <div
      className="c6 c1"
      width={1}
    >
      <select
        className="c7"
        fontSize={
          Array [
            2,
            null,
            1,
          ]
        }
        size="lg"
        style={
          Object {
            "paddingBottom": "8px",
            "paddingTop": "20px",
            "transitionDuration": ".1s",
            "transitionProperty": "padding-top, padding-bottom",
          }
        }
      />
      <svg
        aria-hidden={true}
        className="c8 c9 c10"
        color="text.light"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.4 8l4.6 4.6L16.6 8 18 9.4l-6 6-6-6L7.4 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
